--- a/_posts/2023-11-18-wa-sqli.md
+++ b/_posts/2023-11-18-wa-sqli.md
@@ -259,8 +259,10 @@ Also, remove the category =pets.
 
 ### Lab5 [listing the database contents on non-Oracle databases](https://portswigger.net/web-security/sql-injection/examining-the-database/lab-listing-database-contents-non-oracle)
 
-> Remember, You must figure out the database version and type so that you can use the following payloads. Learn more from the cheat sheet. [SQL injection cheat sheet | Web Security Academy (portswigger.net)](https://portswigger.net/web-security/sql-injection/cheat-sheet)
+> Remember, You must figure out the database version and type so that you can use the following payloads. 
 {: .prompt-info }
+
+Learn more from the cheat sheet. [SQL injection cheat sheet | Web Security Academy (portswigger.net)](https://portswigger.net/web-security/sql-injection/cheat-sheet)
 
 ```
 ' union SELECT table_name,NULL FROM information_schema.tables--
