--- a/_posts/2023-11-18-wa-sqli.md
+++ b/_posts/2023-11-18-wa-sqli.md
@@ -23,7 +23,7 @@ Most SQLi vulnerabilities are blind SQLi.
 - Submit SQL queries, and check for the differences.
 - Submit Boolean conditions `OR 1=1` and `OR 1=2`.
 - Submit payloads designed to trigger time delays. `'; waitfor delay ('0:0:20')--`
-- Submit [Out-of-Band Application Security Testing (OAST) Software - PortSwigger](https://portswigger.net/burp/application-security-testing/oast) payloads designed to trigger an out-of-band network interaction, and monitor for any resulting interactions. `exec master.xp_dirtree '//str.burpcollaborator.net/a'`
+- Submit [Out-of-Band Application Security Testing (OAST) Software - PortSwigger](https://portswigger.net/burp/application-security-testing/oast) payloads designed to trigger an out-of-band network interaction, and monitor for any resulting interactions.
 
 ## SQL injection examples
 1. **Retrieving hidden data**: 
@@ -262,7 +262,7 @@ Also, remove the category =pets.
 > Remember, You must figure out the database version and type so that you can use the following payloads. 
 {: .prompt-info }
 
-Learn more from the cheat sheet. [SQL injection cheat sheet | Web Security Academy (portswigger.net)](https://portswigger.net/web-security/sql-injection/cheat-sheet)
+Learn more from the cheat sheet. [SQL injection cheat sheet](https://portswigger.net/web-security/sql-injection/cheat-sheet)
 
 ```
 ' union SELECT table_name,NULL FROM information_schema.tables--
